Deployment/App/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordermanagementv1
  namespace: orderapp
  labels:
    app: ordermanagement
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ordermanagement
  template:
    metadata:
      labels:
        app: ordermanagement
    spec:
      containers:
        - name: ordermanagementdemo
          image: benjapholm/oms-internship-sellsuki
          ports:
            - name: http
              containerPort: 8080
