Deployment/App/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordermanagement
  namespace: orderapp
  labels:
    app: ordermanagement
spec:
  selector:
    app: ordermanagement
  ports:
    - name: http
      protocol: TCP
      port: 1150
      targetPort: 8080
