Deployment/App/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordermanagement
  namespace: orderapp

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ordermanagement
                port:
                  number: 1150
